feat: a* with beam search

--- a/list_1/report.ipynb
+++ b/list_1/report.ipynb
@@ -35,18 +35,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for conn in graph_time[\"Muchobór Wielki\"]:\n",
-    "    print(\"Departure:\", conn[\"departure_time\"], \"Arrival:\", conn[\"arrival_time\"], \"Line:\", conn[\"line\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "start_time = datetime.strptime(\"23:38:00\", \"%H:%M:%S\")\n",
-    "total_cost, path, run_time = dijkstra.dijkstra_min_time(graph_time, \"Kowale (Stacja kolejowa)\", \"Kochanowskiego\", start_time)\n",
+    "total_cost, path, run_time = dijkstra.dijkstra_min_time(\n",
+    "    graph_time, \n",
+    "    \"Kowale (Stacja kolejowa)\", \n",
+    "    \"Kochanowskiego\", \n",
+    "    start_time\n",
+    ")\n",
     "\n",
     "df = formatter.format_schedule_df(path, criterion=\"time\", start_time=start_time)  \n",
     "print(df.to_string(index=False))\n",
@@ -68,7 +63,14 @@
    "outputs": [],
    "source": [
     "start_time = datetime.strptime(\"23:08:00\", \"%H:%M:%S\")\n",
-    "total_cost, path, run_time = a_star.a_star_min_time(graph_time, stop_coords, \"Muchobór Wielki\", \"Mroźna\", start_time, max_speed=15)\n",
+    "total_cost, path, run_time = a_star.a_star_min_time(\n",
+    "    graph_time, \n",
+    "    stop_coords, \n",
+    "    \"Muchobór Wielki\", \n",
+    "    \"Mroźna\", \n",
+    "    start_time, \n",
+    "    max_speed=15\n",
+    ")\n",
     "\n",
     "df = formatter.format_schedule_df(path, criterion=\"time\", start_time=start_time)  \n",
     "print(df.to_string(index=False))\n",
@@ -90,7 +92,40 @@
    "outputs": [],
    "source": [
     "start_time = datetime.strptime(\"08:00:00\", \"%H:%M:%S\")\n",
-    "total_cost, path, run_time = a_star.a_star_min_changes(graph_changes, \"Muchobór Wielki\", \"Mroźna\",  start_time)\n",
+    "total_cost, path, run_time = a_star.a_star_min_changes(\n",
+    "    graph_changes, \n",
+    "    \"Muchobór Wielki\", \n",
+    "    \"Mroźna\",  \n",
+    "    start_time\n",
+    ")\n",
+    "\n",
+    "df = formatter.format_schedule_df(path, criterion=\"change\", start_time=start_time)  \n",
+    "print(df.to_string(index=False))\n",
+    "\n",
+    "print(\"\\n\\n\\n\")\n",
+    "\n",
+    "data = {\n",
+    "    \"metric\": [\"TOTAL COST\", \"RUN TIME\"],\n",
+    "    \"value\": [total_cost, run_time]\n",
+    "}\n",
+    "df_summary = pd.DataFrame(data)\n",
+    "print(df_summary.to_string(index=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = datetime.strptime(\"08:00:00\", \"%H:%M:%S\")\n",
+    "total_cost, path, run_time = a_star.a_star_min_changes_beam(\n",
+    "    graph_changes, \n",
+    "    \"Muchobór Wielki\", \n",
+    "    \"Mroźna\",  \n",
+    "    start_time, \n",
+    "    beam_width=2000\n",
+    ")\n",
     "\n",
     "df = formatter.format_schedule_df(path, criterion=\"change\", start_time=start_time)  \n",
     "print(df.to_string(index=False))\n",
