--- a/list_1/report.ipynb
+++ b/list_1/report.ipynb
@@ -13,6 +13,7 @@
     "import Graph_algorithms.graph_loader as loader\n",
     "import Graph_algorithms.dijkstra as dijkstra\n",
     "import Utilities.formatter as formatter\n",
+    "import Graph_algorithms.tabu_search as tabu\n",
     "\n",
     "pd.options.display.float_format = '{:.2f}'.format"
    ]
@@ -26,7 +27,11 @@
     "graph_time = loader.load_weighted_graph(criterion='time')\n",
     "graph_changes = loader.load_weighted_graph(criterion='change')\n",
     "\n",
-    "stop_coords = a_star.load_stop_coords()"
+    "stop_coords = a_star.load_stop_coords()\n",
+    "\n",
+    "start_time_1 = datetime.strptime(\"08:00:00\", \"%H:%M:%S\")\n",
+    "start_time_2 = datetime.strptime(\"16:00:00\", \"%H:%M:%S\")\n",
+    "start_time_3 = datetime.strptime(\"22:00:00\", \"%H:%M:%S\")"
    ]
   },
   {
@@ -35,15 +40,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_time = datetime.strptime(\"23:38:00\", \"%H:%M:%S\")\n",
     "total_cost, path, run_time = dijkstra.dijkstra_min_time(\n",
     "    graph_time, \n",
-    "    \"Kowale (Stacja kolejowa)\", \n",
-    "    \"Kochanowskiego\", \n",
-    "    start_time\n",
+    "    \"Muchobór Wielki\",\n",
+    "    \"Mroźna\",\n",
+    "    start_time_1\n",
     ")\n",
     "\n",
-    "df = formatter.format_schedule_df(path, criterion=\"time\", start_time=start_time)  \n",
+    "df = formatter.format_schedule_df(path, criterion=\"time\", start_time=start_time_1)  \n",
     "print(df.to_string(index=False))\n",
     "\n",
     "print(\"\\n\\n\\n\")\n",
@@ -62,17 +66,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_time = datetime.strptime(\"23:08:00\", \"%H:%M:%S\")\n",
     "total_cost, path, run_time = a_star.a_star_min_time(\n",
     "    graph_time, \n",
     "    stop_coords, \n",
     "    \"Muchobór Wielki\", \n",
     "    \"Mroźna\", \n",
-    "    start_time, \n",
+    "    start_time_1, \n",
     "    max_speed=15\n",
     ")\n",
     "\n",
-    "df = formatter.format_schedule_df(path, criterion=\"time\", start_time=start_time)  \n",
+    "df = formatter.format_schedule_df(path, criterion=\"time\", start_time=start_time_1)  \n",
     "print(df.to_string(index=False))\n",
     "\n",
     "print(\"\\n\\n\\n\")\n",
@@ -91,15 +94,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_time = datetime.strptime(\"08:00:00\", \"%H:%M:%S\")\n",
     "total_cost, path, run_time = a_star.a_star_min_changes(\n",
     "    graph_changes, \n",
     "    \"Muchobór Wielki\", \n",
     "    \"Mroźna\",  \n",
-    "    start_time\n",
+    "    start_time_1\n",
     ")\n",
     "\n",
-    "df = formatter.format_schedule_df(path, criterion=\"change\", start_time=start_time)  \n",
+    "df = formatter.format_schedule_df(path, criterion=\"change\", start_time=start_time_1)  \n",
     "print(df.to_string(index=False))\n",
     "\n",
     "print(\"\\n\\n\\n\")\n",
@@ -118,16 +120,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_time = datetime.strptime(\"08:00:00\", \"%H:%M:%S\")\n",
     "total_cost, path, run_time = a_star.a_star_min_changes_beam(\n",
     "    graph_changes, \n",
     "    \"Muchobór Wielki\", \n",
     "    \"Mroźna\",  \n",
-    "    start_time, \n",
+    "    start_time_1, \n",
     "    beam_width=2000\n",
     ")\n",
     "\n",
-    "df = formatter.format_schedule_df(path, criterion=\"change\", start_time=start_time)  \n",
+    "df = formatter.format_schedule_df(path, criterion=\"change\", start_time=start_time_1)  \n",
     "print(df.to_string(index=False))\n",
     "\n",
     "print(\"\\n\\n\\n\")\n",
@@ -135,6 +136,78 @@
     "data = {\n",
     "    \"metric\": [\"TOTAL COST\", \"RUN TIME\"],\n",
     "    \"value\": [total_cost, run_time]\n",
+    "}\n",
+    "df_summary = pd.DataFrame(data)\n",
+    "print(df_summary.to_string(index=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cost_func = dijkstra.dijkstra_min_time\n",
+    "\n",
+    "best_cost, best_solution, best_segments, run_time = tabu.tabu_search_route(\n",
+    "    \"Muchobór Wielki\", \n",
+    "    [\"Rynek\", \"FAT\", \"Ogród Botaniczny\"],\n",
+    "    start_time_1, \n",
+    "    graph_time, \n",
+    "    cost_func, \n",
+    "    criterion=\"time\", \n",
+    "    iterations=1000\n",
+    ")\n",
+    "\n",
+    "df_route = formatter.format_tabu_route_df(\n",
+    "    best_segments, \n",
+    "    criterion=\"time\", \n",
+    "    start_time=start_time_1\n",
+    ")\n",
+    "\n",
+    "print(df_route.to_string(index=False))\n",
+    "\n",
+    "print(\"\\n\\n\\n\")\n",
+    "\n",
+    "data = {\n",
+    "    \"metric\": [\"TOTAL COST\", \"RUN TIME\", \"OPTIMAL ORDER OF VISITING STOPS\"],\n",
+    "    \"value\": [best_cost, run_time, best_solution]\n",
+    "}\n",
+    "df_summary = pd.DataFrame(data)\n",
+    "print(df_summary.to_string(index=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cost_func = a_star.a_star_min_changes\n",
+    "\n",
+    "best_cost, best_solution, best_segments, run_time = tabu.tabu_search_route(\n",
+    "    \"Muchobór Wielki\", \n",
+    "    [\"Rynek\", \"FAT\", \"Ogród Botaniczny\"],\n",
+    "    start_time_1, \n",
+    "    graph_changes, \n",
+    "    cost_func, \n",
+    "    criterion=\"change\", \n",
+    "    iterations=1000\n",
+    ")\n",
+    "\n",
+    "df_route = formatter.format_tabu_route_df(\n",
+    "    best_segments, \n",
+    "    criterion=\"change\", \n",
+    "    start_time=start_time_1\n",
+    ")\n",
+    "\n",
+    "print(df_route.to_string(index=False))\n",
+    "\n",
+    "print(\"\\n\\n\\n\")\n",
+    "\n",
+    "data = {\n",
+    "    \"metric\": [\"TOTAL COST\", \"RUN TIME\", \"OPTIMAL ORDER OF VISITING STOPS\"],\n",
+    "    \"value\": [best_cost, run_time, best_solution]\n",
     "}\n",
     "df_summary = pd.DataFrame(data)\n",
     "print(df_summary.to_string(index=False))"
